<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World!</string>
	<string name="app_name">EasyDlna</string>
	<string name="StartDMC">Start DMC</string>
	<string name="StartDMR">Start DMR</string>
	<string name="msg_network_dmc">StartDMC: Network is not available, please open WIFI</string>
	<string name="msg_network_dmr">StartDMR: Network is not available, please open WIFI</string>
	<string name="msg_network">Network is not available, please open WIFI</string>
	<string name="server_name">ServerName</string>
	<string name="rename">Rename</string>
	<string name="share_setting">ShareSetting</string>
	<string name="video">Vedio</string>
	<string name="audio">Audio</string>
	<string name="image">Image</string>
	<string name="basic_setting">BasicSetting</string>
	<string name="auto_start">AutoStart</string>
	<string name="start_dms">Start Service</string>
	<string name="close_dms">&#160;&#160;Stop Service&#160;&#160;&#160;</string>
	<string name="send">&#160;&#160;&#160;&#160;Broadcast&#160;&#160;&#160;&#160;</string>
	<string name="dms_button">EasyDlnaServer</string>
	<string name="dmc_down">DMC not started</string>
	<string name="dmc_start">DMC started</string>
	<string name="dmr_down">DMR not started</string>
	<string name="dmr_start">DMR started</string>
	<string name="dms_down">DMS not started</string>
	<string name="dms_start">DMS started</string>
	<string name="ok">OK</string>
	<string name="network_warning">Network is not avalible,please open WIFI</string>
</resources>